Implemented back button in InputVC

--- a/TimeTrack/Base.lproj/Main.storyboard
+++ b/TimeTrack/Base.lproj/Main.storyboard
@@ -207,6 +207,9 @@
                                         <state key="normal" title="Back">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="r2M-he-3Fg" eventType="touchUpInside" id="eT4-Y2-H8T"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k9q-W6-iNB">
                                         <rect key="frame" x="307" y="12" width="60" height="40"/>
@@ -217,6 +220,9 @@
                                         <state key="normal" title="Save">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="saveButtonPressed:" destination="r2M-he-3Fg" eventType="touchUpInside" id="vBp-Fi-3aa"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add New Task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlH-BG-lyY">
                                         <rect key="frame" x="123" y="20" width="129" height="24"/>
